[gd_scene load_steps=2 format=3 uid="uid://duorweghpsb4p"]

[ext_resource type="Script" path="res://Menus/start_menu.gd" id="1_gqbr7"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqbr7")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Pathfinding Demo"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Start"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Credits"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 28
text = "Exit Game"

[node name="Credits" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(800, 600)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = 60.0
offset_right = -240.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Credits"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 790.0
offset_bottom = 590.0

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 44

[node name="ScrollContainer" type="ScrollContainer" parent="Credits/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(720, 440)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/CenterContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
alignment = 1

[node name="GameCredits" type="Label" parent="Credits/CenterContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "A game by Kenneth Rodriguez"

[node name="GodotLicense" type="Label" parent="Credits/CenterContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
text = "--------------------------------------------------------------------------------------
    This game uses Godot Engine, available under the following license:

    Copyright (c) 2014-present Godot Engine contributors. Copyright (c) 2007-2014 Juan Linietsky, Ariel Manzur.

    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."
vertical_alignment = 1
autowrap_mode = 2

[node name="FreeTypeLicense" type="Label" parent="Credits/CenterContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
text = "--------------------------------------------------------------------------------------
Portions of this software are copyright Â© 1996-2022 The FreeType Project (www.freetype.org). All rights reserved."
vertical_alignment = 1
autowrap_mode = 2

[node name="ENetLicense" type="Label" parent="Credits/CenterContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
text = "--------------------------------------------------------------------------------------
    Copyright (c) 2002-2020 Lee Salzman

    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
"
vertical_alignment = 1
autowrap_mode = 2

[node name="mbedTLSLicense" type="Label" parent="Credits/CenterContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
text = "--------------------------------------------------------------------------------------
    Copyright The Mbed TLS Contributors

    Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
"
vertical_alignment = 1
autowrap_mode = 2

[node name="HideCreditsButton" type="Button" parent="Credits/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Credits/CenterContainer/VBoxContainer/HideCreditsButton" to="." method="_on_hide_credits_button_pressed"]
